changed theme so that it's in source control
Former-commit-id: 23275f9b775f27b8a42728468efb68f9ef1f8132

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
-baseURL: http://example.org/
+baseURL: https://nikolaus-eckhard.onrender.com/
 languageCode: en-us
 title: Nikolaus Eckhard
-theme: hugo-flex
+theme: oliver
 assetDir: content
 taxonomies:
   tag: tags
