added index page (not optimized for mobile yet)
Former-commit-id: 7faed506e0bae42efa1e333674860a265c8c7db2

--- a/config.yaml
+++ b/config.yaml
@@ -5,3 +5,12 @@ theme: oliver
 assetDir: content
 taxonomies:
   tag: tags
+
+menu:
+  nav:
+  - name: index
+    url: projects/
+    weight: 1
+  - name: about
+    url: about/
+    weight: 2
