also building drafts
Former-commit-id: 38ecc3becb34de11bb5d86fd7b143dc2740966b2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,4 @@ jobs:
     - name: Hugo setup
       uses: peaceiris/actions-hugo@v2.3.2
     - name: compile hugo page
-      run: hugo
+      run: hugo -D
