--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,3 +30,4 @@ jobs:
         local_dir: public
         # The remote folder to copy to, deafults to root FTP folder (I recommend you configure this on your server side instead of here)
         remote_dir: draft
+        args: --delete
