fixed issue with passing params
Former-commit-id: dc3c9d4d2afef424d61640b251a8aadfee69ba02

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       run: hugo -D
     - name: FTP Deploy
       uses: SamKirkland/FTP-Deploy-Action@2.0.0
-      with:
+      env:
         # FTP server name (you may need to specify a port)
         ftp_server: ssh.nikolauseckhard.at
         # FTP account username
