--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,17 +17,17 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@2.0.0
       env:
         # FTP server name (you may need to specify a port)
-        ftp_server: ssh.nikolauseckhard.at
+        FTP_SERVER: ssh.nikolauseckhard.at
         # FTP account username
-        ftp_username: nikolauseckhard.at
+        FTP_USERNAME: nikolauseckhard.at
         # FTP account password
-        ftp_password: ${{ secrets.SFTP_PASSWORD }}
+        FTP_PASSWORD: ${{ secrets.SFTP_PASSWORD }}
         # Protocol used to deploy (ftp or sftp)
-        method: sftp
+        METHOD: sftp
         # The port used to connect to server
-        port: 22
+        PORT: 22
         # The local folder to copy, defaults to root project folder
-        local_dir: public
+        LOCAL_DIR: public
         # The remote folder to copy to, deafults to root FTP folder (I recommend you configure this on your server side instead of here)
-        remote_dir: draft
-        args: --delete
+        REMOTE_DIR: draft
+        ARGS: --delete
