--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,4 @@ jobs:
         LOCAL_DIR: public
         # The remote folder to copy to, deafults to root FTP folder (I recommend you configure this on your server side instead of here)
         REMOTE_DIR: draft
-        ARGS: --delete
+        ARGS: --delete --verbose --transfer-all
