--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,9 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@2.0.0
       env:
         # FTP server name (you may need to specify a port)
-        FTP_SERVER: ssh.nikolauseckhard.at
+        FTP_SERVER: ${{ secrets.FTP_SERVER }}
         # FTP account username
-        FTP_USERNAME: nikolauseckhard.at
+        FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
         # FTP account password
         FTP_PASSWORD: ${{ secrets.SFTP_PASSWORD }}
         # Protocol used to deploy (ftp or sftp)
