--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,34 @@ resources/_gen/images/tisch2_hu4c21aba5459b0e83328e47f6b00434c1_1385143_400x500_
 resources/_gen/images/tisch2_hu4c21aba5459b0e83328e47f6b00434c1_1385143_600x300_fill_q75_box_smart1.jpg
 resources/_gen/images/tisch2_hu4c21aba5459b0e83328e47f6b00434c1_1385143_600x400_fill_q75_box_smart1.jpg
 resources/_gen/images/tisch2_hu4c21aba5459b0e83328e47f6b00434c1_1385143_600x500_fill_q75_box_smart1.jpg
+resources/_gen/images/4321_hp(y)_hu9db634f4f692a440f052eb6a8b57665a_945233_600x400_fill_q75_box_smart1.jpg
+resources/_gen/images/4321_hp(y)_hu9db634f4f692a440f052eb6a8b57665a_945233_720x0_resize_q75_box.jpg
+resources/_gen/images/HaNeviim_hp(1)_hua614dff4b1a92665019036cfe46529a4_1216315_600x400_fill_q75_box_smart1.jpg
+resources/_gen/images/HaNeviim_hp(1)_hua614dff4b1a92665019036cfe46529a4_1216315_720x0_resize_q75_box.jpg
+resources/_gen/images/RZH_hp_huf82ae4ca7260485f601c190f949be035_1408216_600x400_fill_q75_box_smart1.jpg
+resources/_gen/images/RZH_hp_huf82ae4ca7260485f601c190f949be035_1408216_720x0_resize_q75_box.jpg
+resources/_gen/images/bonefactory_hp(x)_hu032d57d8abe63f4318936618157aa3c4_848999_600x400_fill_q75_box_smart1.jpg
+resources/_gen/images/bonefactory_hp(x)_hu032d57d8abe63f4318936618157aa3c4_848999_720x0_resize_q75_box.jpg
+resources/_gen/images/breath_hp(3)_hubaa27c33d60d4b1a9045e636d9508d65_294450_600x400_fill_q75_box_smart1.jpg
+resources/_gen/images/breath_hp(3)_hubaa27c33d60d4b1a9045e636d9508d65_294450_720x0_resize_q75_box.jpg
+resources/_gen/images/curing(w)_hu91eeeb32620edeff9f47c47d90ea01c0_254029_600x400_fill_q75_box_smart1.jpg
+resources/_gen/images/curing(w)_hu91eeeb32620edeff9f47c47d90ea01c0_254029_720x0_resize_q75_box.jpg
+resources/_gen/images/dolo_hp(10)_hu1f78cff3f4416af4d4fa6437724caf7b_1267521_600x400_fill_q75_box_smart1.jpg
+resources/_gen/images/dolo_hp(10)_hu1f78cff3f4416af4d4fa6437724caf7b_1267521_720x0_resize_q75_box.jpg
+resources/_gen/images/projects/HaNeviim/
+resources/_gen/images/projects/RaumZeitHund/
+resources/_gen/images/projects/Saturn/
+resources/_gen/images/projects/bone factory/
+resources/_gen/images/projects/brea.th.through/
+resources/_gen/images/projects/curing/
+resources/_gen/images/projects/four three two one/
+resources/_gen/images/projects/the end of walnut grove/
+resources/_gen/images/roemer (2)_hue2b0c8f32675b35bba2c818c0060ff06_1258194_600x400_fill_q75_box_smart1.JPG
+resources/_gen/images/roemer (2)_hue2b0c8f32675b35bba2c818c0060ff06_1258194_720x0_resize_q75_box.JPG
+resources/_gen/images/saturn_hp(x)_hu99fee053c55dac34cd0c5ee728613c69_151459_600x400_fill_q75_box_smart1.jpg
+resources/_gen/images/saturn_hp(x)_hu99fee053c55dac34cd0c5ee728613c69_151459_720x0_resize_q75_box.jpg
+resources/_gen/images/walnut(1)_hua2537c8c20db26dbc53003bbd788343a_253369_600x400_fill_q75_box_smart1.jpg
+resources/_gen/images/walnut(1)_hua2537c8c20db26dbc53003bbd788343a_253369_720x0_resize_q75_box.jpg
+resources/_gen/images/projects/junge*
+resources/_gen/images/projects/sekund*
+
