removed scroll snap behavior
Former-commit-id: 753ec8b4f4600410bfb7a18e4e331d07bb5290bb

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,4 @@ resources/_gen/images/walnut(1)_hua2537c8c20db26dbc53003bbd788343a_253369_720x0_
 resources/_gen/images/projects/junge*
 resources/_gen/images/projects/sekund*
 
+/resources/_gen/
