--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://nikolauseckhard.at/draft
+# baseURL: https://nikolauseckhard.at/draft
 languageCode: en-us
 title: Nikolaus Eckhard
 theme: oliver
