--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Hugo setup
       uses: peaceiris/actions-hugo@v2.3.2
     - name: compile hugo page
-      run: hugo -D -b https://nikolauseckhard.at/draft/
+      run: hugo -D -b https://www.nikolauseckhard.at/draft/
     - name: FTP Deploy
       uses: SamKirkland/FTP-Deploy-Action@2.0.0
       env:
