--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Hugo setup
       uses: peaceiris/actions-hugo@v2.3.2
     - name: compile hugo page
-      run: hugo -D -b https://nikolauseckhard.at/
+      run: hugo -D -b https://www.nikolauseckhard.at/
     - name: FTP Deploy
       uses: SamKirkland/FTP-Deploy-Action@2.0.0
       env:
