chg(devops) bumped the version of the ftp action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,20 +23,22 @@ jobs:
         run: hugo -D -b https://www.nikolauseckhard.at/
 
       - name: FTP Deploy
-        uses: SamKirkland/FTP-Deploy-Action@2.0.0
-        env:
+        uses: SamKirkland/FTP-Deploy-Action@4.3.2
+        with:
           # FTP server name (you may need to specify a port)
-          FTP_SERVER: ${{ secrets.FTP_SERVER }}
+          server: ${{ secrets.FTP_SERVER }}
           # FTP account username
-          FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
+          username: ${{ secrets.FTP_USERNAME }}
           # FTP account password
-          FTP_PASSWORD: ${{ secrets.SFTP_PASSWORD }}
+          password: ${{ secrets.SFTP_PASSWORD }}
           # Protocol used to deploy (ftp or sftp)
-          METHOD: sftp
+          # METHOD: sftp
           # The port used to connect to server
-          PORT: 22
+          port: 22
           # The local folder to copy, defaults to root project folder
-          LOCAL_DIR: public
-          ARGS: --delete --verbose --transfer-all
+          local-dir: public
+          log-level: standard
+          protocol: ftps
+          #ARGS: --delete --verbose --transfer-all
 
 
