--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
           # The local folder to copy, defaults to root project folder
           local-dir: ./public/
           log-level: standard
-          protocol: ftps
+          protocol: sftp
           #ARGS: --delete --verbose --transfer-all
 
 
