--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,44 @@
-name: CI
+name: Release
 
-on:
-  push:
-    tags: release
+on: [push]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  deploy:
+    runs-on: ubuntu-22.04
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
     steps:
-    - uses: actions/checkout@v1
-    - name: Hugo setup
-      uses: peaceiris/actions-hugo@v2.3.2
-    - name: compile hugo page
-      run: hugo -D -b https://www.nikolauseckhard.at/draft/
-    - name: FTP Deploy
-      uses: SamKirkland/FTP-Deploy-Action@2.0.0
-      env:
-        # FTP server name (you may need to specify a port)
-        FTP_SERVER: ${{ secrets.FTP_SERVER }}
-        # FTP account username
-        FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
-        # FTP account password
-        FTP_PASSWORD: ${{ secrets.SFTP_PASSWORD }}
-        # Protocol used to deploy (ftp or sftp)
-        METHOD: sftp
-        # The port used to connect to server
-        PORT: 22
-        # The local folder to copy, defaults to root project folder
-        LOCAL_DIR: public
-        # The remote folder to copy to, deafults to root FTP folder (I recommend you configure this on your server side instead of here)
-        REMOTE_DIR: draft
-        ARGS: --delete --verbose --transfer-all
+      - uses: actions/checkout@v3
+        with:
+          submodules: true  # Fetch Hugo themes (true OR recursive)
+          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: '0.91.2'
+          # extended: true
+
+      - name: compile hugo page
+        run: hugo -D -b https://www.nikolauseckhard.at/
+
+      - name: FTP Deploy
+        uses: SamKirkland/FTP-Deploy-Action@2.0.0
+        env:
+          # FTP server name (you may need to specify a port)
+          FTP_SERVER: ${{ secrets.FTP_SERVER }}
+          # FTP account username
+          FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
+          # FTP account password
+          FTP_PASSWORD: ${{ secrets.SFTP_PASSWORD }}
+          # Protocol used to deploy (ftp or sftp)
+          METHOD: sftp
+          # The port used to connect to server
+          PORT: 22
+          # The local folder to copy, defaults to root project folder
+          LOCAL_DIR: public
+          # The remote folder to copy to, deafults to root FTP folder (I recommend you configure this on your server side instead of here)
+          # REMOTE_DIR: draft
+          ARGS: --delete --verbose --transfer-all
+
+
