--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,9 @@
 name: Release
 
-on: [push]
+on:
+  create:
+    tags:
+      - release
 
 jobs:
   deploy:
@@ -38,7 +41,7 @@ jobs:
           # The local folder to copy, defaults to root project folder
           LOCAL_DIR: public
           # The remote folder to copy to, deafults to root FTP folder (I recommend you configure this on your server side instead of here)
-          REMOTE_DIR: draft
+          # REMOTE_DIR: draft
           ARGS: --delete --verbose --transfer-all
 
 
